# BioRT-HBV-Universal

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build_biort_linux.sh  build_biort_windows.bat  compiling_instructions.txt
cvode/: CMakeLists.txt
input/Konza/: cdbs.txt  cini.txt
src/: CMakeLists.txt  init.c  lookup.c  main.c  react.c  read_cini.c  read_hbv.c  transpt.c
src/include/: biort.h
